ECAT-235 - ISA - Group Management - Create Groups screen has a visual alignment bug when switching between options ECAT-236 - ISA - Group Management - Can route out of GM without saving or discarding

--- a/src/app/lmsadmin/group-sets/config-groupset/config-groupset.component.scss
+++ b/src/app/lmsadmin/group-sets/config-groupset/config-groupset.component.scss
@@ -1,5 +1,5 @@
 .width {
-    max-width: 1000px;
+    max-width: 500px;
     margin: 0 auto;
     margin-top: 1%;
 }
